--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CONNECTION_URL = mongodb+srv://kharshan916@gmail.com:Password@3.@cluster0.kgarwxe.mongodb.net/netflix?retryWrites=true&w=majority
+CONNECTION_URL = mongodb+srv://harshan:Harshan@3.@cluster0.koygcpg.mongodb.net/netflix?retryWrites=true&w=majority
