--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 CONNECTION_URL = mongodb+srv://harshan:Harshan@3.@cluster0.koygcpg.mongodb.net/netflix?retryWrites=true&w=majority
-PORT = 5000;
+PORT = 5000
