--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CONNECTION_URL = mongodb+srv://harshan:Harshan@3.@cluster0.koygcpg.mongodb.net/netflix?retryWrites=true&w=majority
+# CONNECTION_URL = mongodb+srv://harshan:Harshan@3.@cluster0.koygcpg.mongodb.net/netflix?retryWrites=true&w=majority
 PORT = 5000
-MONGO_URL = mongodb+srv://harshan:Harshan@3.@cluster0.koygcpg.mongodb.net/netflix
+MONGO_URL = mongodb+srv://harshan:Harshan%403.@cluster0.koygcpg.mongodb.net/netflix
